--- a/bench.ipynb
+++ b/bench.ipynb
@@ -16,53 +16,14 @@
    "source": [
     "using Pkg\n",
     "Pkg.activate(\".\")\n",
-    "using rumigen"
+    "using rumigen, DataFrames, Statistics, Serialization, LinearAlgebra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "using DataFrames, Statistics, Serialization, LinearAlgebra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200×200 Matrix{Float64}:\n",
-       " 1.04492    0.299805   0.0820312  …  0.0693359  0.0976562  0.046875\n",
-       " 0.299805   1.01367    0.128906      0.0625     0.0625     0.0673828\n",
-       " 0.0820312  0.128906   1.06641       0.0917969  0.0703125  0.0986328\n",
-       " 0.0664062  0.0488281  0.310547      0.0839844  0.0664062  0.0722656\n",
-       " 0.0654297  0.0507812  0.314453      0.188477   0.0546875  0.0673828\n",
-       " 0.116211   0.0585938  0.0537109  …  0.0712891  0.107422   0.0419922\n",
-       " 0.0751953  0.0908203  0.118164      0.0634766  0.0878906  0.142578\n",
-       " 0.0439453  0.0390625  0.0615234     0.0849609  0.0585938  0.0517578\n",
-       " 0.0732422  0.0644531  0.0605469     0.0332031  0.0458984  0.0498047\n",
-       " 0.188477   0.0683594  0.0595703     0.0576172  0.0966797  0.0419922\n",
-       " ⋮                                ⋱                        \n",
-       " 0.0585938  0.0761719  0.0654297     0.0800781  0.133789   0.118164\n",
-       " 0.0517578  0.0517578  0.0527344     0.0537109  0.0751953  0.0517578\n",
-       " 0.0507812  0.0380859  0.0488281     0.0859375  0.0791016  0.0458984\n",
-       " 0.0712891  0.118164   0.1875        0.0546875  0.0986328  0.0771484\n",
-       " 0.0576172  0.0507812  0.0820312  …  0.292969   0.0664062  0.0673828\n",
-       " 0.0634766  0.0517578  0.0566406     0.291016   0.0615234  0.0605469\n",
-       " 0.0693359  0.0625     0.0917969     1.01953    0.0566406  0.0546875\n",
-       " 0.0976562  0.0625     0.0703125     0.0566406  1.03516    0.299805\n",
-       " 0.046875   0.0673828  0.0986328     0.0546875  0.299805   1.03711"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "ped = deserialize(\"rst/test-suite/bar-uhp+ped.ser\")\n",
     "K = 2(1 - (1 - .027) * (1 - .0125)^2)\n",
@@ -70,66 +31,28 @@
     "rumigen.animalModel(ped, inv(A), .25)\n",
     "crp = filter(row -> row.grt == 0, ped)\n",
     "pool = 1001:1200\n",
-    "A22 = A[pool, pool]"
+    "A22 = A[pool, pool];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mSearching solution for K \u001b[38;2;239;83;80m=\u001b[39m\u001b[32m \u001b[39m\u001b[38;2;144;202;249m0.102\u001b[39m:  \n",
-      "itr = 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  iter: \u001b[38;2;144;202;249m1\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m138\u001b[39mitr = 2\n",
-      "  iter: \u001b[38;2;144;202;249m2\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m101\u001b[39mitr = 3\n",
-      "  iter: \u001b[38;2;144;202;249m3\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m84\u001b[39mitr = 4\n",
-      "  iter: \u001b[38;2;144;202;249m4\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m81\u001b[39mitr = 5\n",
-      "  iter: \u001b[38;2;144;202;249m5\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m81\u001b[39m\n",
+      "\u001b[32mSearching solution for K \u001b[38;2;239;83;80m=\u001b[39m\u001b[32m \u001b[39m\u001b[38;2;144;202;249m0.7\u001b[39m:  \n",
+      "  iter: \u001b[38;2;144;202;249m1\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m104\u001b[39m  iter: \u001b[38;2;144;202;249m2\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m56\u001b[39m  iter: \u001b[38;2;144;202;249m3\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m29\u001b[39m  iter: \u001b[38;2;144;202;249m4\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m17\u001b[39m  iter: \u001b[38;2;144;202;249m5\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m10\u001b[39m  iter: \u001b[38;2;144;202;249m6\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m6\u001b[39m  iter: \u001b[38;2;144;202;249m7\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m4\u001b[39m  iter: \u001b[38;2;144;202;249m8\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m3\u001b[39m  iter: \u001b[38;2;144;202;249m9\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m2\u001b[39m  iter: \u001b[38;2;144;202;249m10\u001b[39m, \u001b[36mnID\u001b[39m: \u001b[38;2;144;202;249m2\u001b[39m\n",
       "\u001b[34mSolution found\u001b[39m, \n",
-      "                                n \u001b[38;2;239;83;80m=\u001b[39m \u001b[38;2;144;202;249m81\u001b[39m c'Ac \u001b[38;2;239;83;80m=\u001b[39m  \u001b[38;2;144;202;249m0.102\u001b[39m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n"
+      "                                n \u001b[38;2;239;83;80m=\u001b[39m \u001b[38;2;144;202;249m2\u001b[39m c'Ac \u001b[38;2;239;83;80m=\u001b[39m  \u001b[38;2;144;202;249m0.555\u001b[39m \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "200-element Vector{Float64}:\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.013221750892998653\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.0\n",
-       " 0.017260250973692808\n",
-       " 0.021857751701182385\n",
-       " ⋮\n",
-       " 0.0\n",
-       " 0.016303708064828608\n",
-       " 0.012265562528003439\n",
-       " 0.006657266701629698\n",
-       " 0.0\n",
-       " 0.014395026303124841\n",
-       " 0.0\n",
-       " 0.00609692002089555\n",
-       " 0.0"
+       "2"
       ]
      },
      "metadata": {},
@@ -137,7 +60,8 @@
     }
    ],
    "source": [
-    "rumigen.myopt(select(crp, [:ebv, :sex]), A22, K)"
+    "c = rumigen.myopt(select(crp, [:ebv, :sex]), A22, 0.7)\n",
+    "sum(c .> 0.0)"
    ]
   },
   {
