Finalization of this project
This project is OK. But I am converting all the functions here to xyBnG.jl.
Pkg xyBnG has an improved structure for easier maintainance and expansion.

--- a/docs/seminar-2024-02-28.tex
+++ b/docs/seminar-2024-02-28.tex
@@ -80,7 +80,7 @@
 \begin{frame}{Simulation}
   Common base population:
 
-  $$\boxed{\text{MaCS}}\Rightarrow\boxed{\text{25\mars}\times\text{50\female}}\xrightleftharpoons[\text{Random select}]{\text{5 generations}}\boxed{\text{200 offspring}}$$
+  $$\boxed{\text{MaCS}_{N_e=100}^{\text{1k grt.}}}\Rightarrow\boxed{\text{25\mars}\times\text{50\female}}\xrightleftharpoons[\text{Random select}]{\text{5 generations}}\boxed{\text{200 offspring}}$$
 
   non-OCS:
 
